--- a/app/src/main/res/layout/thoughts_list_item.xml
+++ b/app/src/main/res/layout/thoughts_list_item.xml
@@ -57,16 +57,17 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-    <RatingBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:numStars="1"
-        android:layout_gravity="center_vertical"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="10dp"
-        android:theme="@style/RatingBar"
-
-        />
+            <ImageButton
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginTop="16dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
+                android:id="@+id/highlight"
+                android:background="@drawable/star_inactive_icon"
+                android:tag="inactive"
+                 />
         </LinearLayout>
 
     </LinearLayout>
