--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -20,7 +20,8 @@
             android:background="@drawable/back_icon"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:tag="Back">
         </ImageButton>
 
         <ImageButton
