--- a/app/src/main/res/layout/notes_list_item.xml
+++ b/app/src/main/res/layout/notes_list_item.xml
@@ -8,15 +8,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="10">
+        android:weightSum="10"
+        android:baselineAligned="false">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="9">
+
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="9">
 
     <TextView
         android:layout_width="wrap_content"
@@ -34,8 +33,10 @@
         android:textSize="28sp"
         android:textStyle="bold"
         android:textColor="@color/Black"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:layout_below="@id/date"
-        android:id="@+id/name"
+        android:id="@+id/title"
         />
 
     <TextView
@@ -45,12 +46,11 @@
         android:textSize="24sp"
         android:maxLines="3"
         android:ellipsize="end"
-        android:layout_below="@id/name"
+        android:layout_below="@id/title"
         android:id="@+id/text"
         />
 
     </RelativeLayout>
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -67,6 +67,7 @@
                 android:id="@+id/highlight"
                 android:background="@drawable/star_inactive_icon"
                 android:tag="inactive"
+                android:contentDescription="@string/highlight_button_description"
                  />
         </LinearLayout>
 
