--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="LightGray">#D3D3D3</color>
     <color name="Black">#000000</color>
     <color name="Yellow">#FFFF00</color>
+    <color name="Orange">#FFA500</color>
 </resources>
