--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.makarov.wonderfulnotes.EditActivity"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true">
 
@@ -114,7 +112,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginBottom="32dp"
-        android:src="@drawable/create_icon"
+        app:srcCompat="@drawable/create_icon"
         android:tint="@color/White"
         app:tint="@color/White"
         app:backgroundTint="@color/colorPrimary"/>
