--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="Black">#000000</color>
     <color name="Yellow">#FFFF00</color>
     <color name="Orange">#FFA500</color>
+    <color name="Red">#FF0000</color>
 </resources>
