--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -64,6 +64,7 @@
                     android:textColor="@color/White"/>
 
                 <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/registerButton"
                     android:layout_marginTop="8dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
