--- a/app/src/main/res/layout/layout_navigation_header_signed_in.xml
+++ b/app/src/main/res/layout/layout_navigation_header_signed_in.xml
@@ -2,16 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="20dp"
     android:background="@drawable/bg_nav_profile"
     android:orientation="vertical">
 
+   <androidx.cardview.widget.CardView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_marginTop="20dp"
+       app:cardCornerRadius="30dp">
    <ImageView
        android:id="@+id/addIcon"
-       android:layout_marginTop="20dp"
        android:layout_width="60dp"
        android:layout_height="60dp"
-       android:src="@drawable/profile_icon" />
+       android:src="@drawable/profile_icon"
+       android:onClick="loadPic"/>
+   </androidx.cardview.widget.CardView>
 
    <TextView
        android:id="@+id/usernameNav"
